Fixing Input on IOS #2

--- a/src/index.css
+++ b/src/index.css
@@ -69,5 +69,4 @@ main{
 
 input::-webkit-date-and-time-value {
   text-align: right;
-  padding-right: 0.8rem;
 }
